step3 working and rule update